amp-sticky-ad fix: delete extra space between stickyAd and page bottom (#3311)

--- a/extensions/amp-sticky-ad/0.1/amp-sticky-ad.css
+++ b/extensions/amp-sticky-ad/0.1/amp-sticky-ad.css
@@ -19,8 +19,19 @@ amp-sticky-ad {
   text-align:center;
   bottom: 0 !important;
   left: 0;
-  z-index: 1;
   width: 100%;
   /* TODO(zhouyx, #3250): discuss on what the max-height should be? */
   max-height: 100px !important;
+  box-sizing: border-box;
+}
+
+.-amp-sticky-ad-layout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.-amp-sticky-ad-layout > amp-ad {
+  display: block;
 }
